--- a/test/snap-test.html
+++ b/test/snap-test.html
@@ -4,6 +4,31 @@
 <head>
     <title>Midtrans Snap Test</title>
     <script src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="Mid-client-l1lXV0xwBLRhI_62"></script>
+    
+    <style>
+        html,
+        body {
+            height: 100%;
+            margin: 0;
+        }
+
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            font-family: sans-serif;
+        }
+
+        h3 {
+            margin-bottom: 20px;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+        }
+    </style>
 </head>
 
 <body>
@@ -12,7 +37,7 @@
 
     <script>
         function pay() {
-            window.snap.pay("b9f47dcd-7837-44ec-af24-fb6b4a3162fb");
+            window.snap.pay("6798afc9-f0d2-4184-8653-647e795fd798");
         }
     </script>
 </body>
